# HITL_platform

./: .gitignore  LICENSE  README.txt
clients/vscode/extension/: .vscodeignore  README.md  hitl-routing-extension-0.1.0.vsix  tsconfig.json
clients/vscode/extension/src/: apiClient.ts  chatProvider.ts  chatViewProvider.ts  schemas.ts  sessionState.ts
clients/vscode/server/: .env.example  requirements.txt  schema.sql  student_assignments.json
clients/vscode/server/app/: assignments.py  main.py  schemas.py
clients/vscode/server/app/persistence/: __init__.py  interface.py
docs/: eclipse_deployment_guide.md  eclipse_development_roadmap.md  telemetry_hosting_architecture.md
hitl-vsc-extension/: DESIGN.md  README.md
hitl-vsc-extension/docs/: demo.md
hitl-vsc-extension/extension/: LICENSE  package-lock.json  package.json
hitl-vsc-extension/extension/src/: apiClient.ts  chatProvider.ts  chatViewProvider.ts  extension.ts  sanitize.ts  sessionLog.ts  sessionState.ts
hitl-vsc-extension/server/: .env.example  pyproject.toml  requirements.txt  schema.sql
hitl-vsc-extension/server/app/: assignments.py  llm_adapter.py  main.py  schemas.py  services.py
hitl-vsc-extension/server/app/persistence/: jsonl_store.py  pg_store.py
